--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://zerobytes.one/
 nav:
     - Home: index.md
     - Machine Learning: ML\index.md
+    - Certificates: Certificates\index.md
     - About: about.md
     
     
