--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,10 +5,10 @@ copyright: These bytes offered to you by Mohamed Abbas
 navigation_depth: 3
 nav:
     - Home: index.md
-    - Machine Learning: ML\index.md   
-    - Courses: Courses\index.md
-    - Dynamic Components: DC\index.md
-    - Certificates: Certificates\index.md
+    - Machine Learning: ml\index.md   
+    - Courses: courses\index.md
+    - Dynamic Components: dc\index.md
+    - Certificates: certificates\index.md
     - About: about.md
     
     
