--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ZeroBytes
-site_url: https://zerobytes.one
+site_url: https://www.zerobytes.one
 repo_url: https://github.com/egy1st/zerobytes-mkdocs
 copyright: These bytes offered to you by Mohamed Abbas
 navigation_depth: 3
