--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-# Copied from https://github.com/squidfunk/mkdocs-material/blob/b8cf7d7/requirements.txt
-
-mkdocs>=1.1
-Pygments>=2.4
-markdown>=3.2
-pymdown-extensions>=7.0
-mkdocs-material-extensions>=1.0b1
+click==8.1.3
+colorama==0.4.4
+ghp-import==2.1.0
+importlib-metadata==4.11.3
+Jinja2==3.1.2
+Markdown==3.3.6
+MarkupSafe==2.1.1
+mergedeep==1.3.4
+mkdocs==1.3.0
+packaging==21.3
+pyparsing==3.0.8
+python-dateutil==2.8.2
+PyYAML==6.0
+pyyaml_env_tag==0.1
+six==1.16.0
+watchdog==2.1.7
+zipp==3.8.0
