--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,9 @@ copyright: These bytes offered to you by Mohamed Abbas
 nav:
     - Home: index.md
     - Machine Learning: ml/index.md
-    - Courses: courses\index.md
-    - Dynamic Components: dc\index.md
-    - Certificates: certificates\index.md
+    - Courses: courses/index.md
+    - Dynamic Components: dc/index.md
+    - Certificates: certificates/index.md
     - About: about.md
     
 site_dir: public
