--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ MarkupSafe==2.1.1
 mergedeep==1.3.4
 mkdocs==1.3.0
 packaging==21.3
+Pygments==2.12.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
 PyYAML==6.0
@@ -15,5 +16,3 @@ pyyaml_env_tag==0.1
 six==1.16.0
 watchdog==2.1.7
 zipp==3.8.0
-pymdown-extensions>=7.0
-pygments>=2.12.0
