--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,9 @@ nav:
         - About me: about.md
         - My CV: cv.md
         - Contact me: contact.md
-    - News: news.md    
+    - News: news.md 
+    - Coupons: coupons.md     
+    
     
 site_dir: public
 edit_uri: edit/main/docs/
