--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
     - Me: me/index.md
         - About me: me/about.md
         - My CV: me/cv.md
-        - Reviewer Profile me/review.md
+        - Reviewer Profile: me/review.md
         - Contact me: me/contact.md
     - News: news.md 
     - Coupons: coupons.md     
