--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
     - DC: dc/index.md
     - Certificates: certificates/index.md
     - Me:
-        - All about me: /me/index.md
+        - All about me: /me/
         - About me: me/about.md
         - My CV: me/cv.md
         - Reviewer Profile: me/reviewer.md
